--- a/service-stubs/apimgt/pom.xml
+++ b/service-stubs/apimgt/pom.xml
@@ -33,6 +33,7 @@
         <module>org.wso2.carbon.apimgt.gateway.stub</module>
         <module>org.wso2.carbon.apimgt.statsupdate.stub</module>
         <module>org.wso2.carbon.apimgt.tier.cache.stub</module>
-	<module>org.wso2.carbon.apimgt.registry.cache.stub</module>
+	    <module>org.wso2.carbon.apimgt.registry.cache.stub</module>
+        <module>org.wso2.carbon.apimgt.localentry.stub</module>
     </modules>
 </project>
