--- a/pom.xml
+++ b/pom.xml
@@ -415,6 +415,11 @@
                 <artifactId>org.wso2.carbon.apimgt.gateway.stub</artifactId>
                 <version>${carbon.apimgt.version}</version>
             </dependency>
+            <dependency>
+            <groupId>org.wso2.carbon.apimgt</groupId>
+            <artifactId>org.wso2.carbon.apimgt.localentry.stub</artifactId>
+            <version>${carbon.apimgt.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.wso2.carbon.apimgt</groupId>
@@ -851,6 +856,12 @@
             <dependency>
                 <groupId>org.wso2.carbon.mediation</groupId>
                 <artifactId>org.wso2.carbon.endpoint.stub</artifactId>
+                <version>${carbon.mediation.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.wso2.carbon.mediation</groupId>
+                <artifactId>org.wso2.carbon.localentry.stub</artifactId>
                 <version>${carbon.mediation.version}</version>
             </dependency>
 
